--- a/src/main/resources/ru/andreymarkelov/atlas/plugins/prombitbucketexporter/i18n/prom-bitbucket-exporter.properties
+++ b/src/main/resources/ru/andreymarkelov/atlas/plugins/prombitbucketexporter/i18n/prom-bitbucket-exporter.properties
@@ -2,11 +2,13 @@ ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.section=Prometheus E
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.section.desc=Setup security token for endpoint.
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.title=Prometheus Exporter Settings
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.desc=Configure security token and job interval for long running metrics.
+ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.linkdesc=Exposed metrics are
+ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.link=here
+ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.lastexecution=Latest execution:
+ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.notyetexecuted=not yet executed
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.success=Token stored successfully.
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.actions.save=Save
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.token=Token
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.token.desc=Enter some text token which will be used to access the prometheus endpoint.
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.delay=Delay
 ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.delay.desc=Delay between successive long running calculations (in minutes).
-ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.lastexecution=Last execution
-ru.andreymarkelov.atlas.plugins.prombitbucketexporter.admin.settings.notyetexecuted=not yet executed
